Aggiunto responsive e swipe per mobile

--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
     font-family: 'Lato';
 }
+
 .container {
     display: flex;
     margin: 0 auto;
@@ -55,4 +56,27 @@
 }
 .nav > i.active {
     color: blue;
+}
+h1 {
+  text-align: center;
+  margin: 40px 0;
+  border: 1px  solid black;
+
+}
+/* responsive */
+@media only screen and (max-device-width: 760px) {
+
+  .container {
+    width: 100%;
+  }
+   .slider-wrapper .images {
+    text-align: center;
+  }
+  .prev, .next {
+    display: none;
+  }
+
+  .nav {
+    display: none;
+  }
 }
